2012-01-27  Tobias Burnus  <burnus@net-b.de>

PR fortran/52016
        * resolve.c (resolve_formal_arglist): Fix elemental
        constraint checks for polymorphic dummies.

2012-01-27  Tobias Burnus  <burnus@net-b.de>

        PR fortran/52016
        * gfortran.dg/elemental_args_check_5.f90: New.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@183620 138bc75d-0d04-0410-961f-82ee72b054a4